--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:authorities="@string/authority"
+            android:name=".Database.MyContentProvider"
+            android:exported="false"/>
     </application>
 
 </manifest>
